--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,9 +1,12 @@
+* {
+  margin: 0;
+  color: #123c69;
+}
 html,
 body {
   padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  font-family: "Times New Roman", Times, serif;
 }
 
 a {
@@ -13,4 +16,16 @@ a {
 
 * {
   box-sizing: border-box;
+}
+h1,
+h2,
+h3,
+h4,
+p,
+form,
+ul {
+  margin: 0.5em;
+  /* font-family: "Times New Roman", Times, serif; */
+  font-family: "Spectral";
+  font-size: 0.75rem;
 }
